# yuchiki-c-compiler

./: .gitignore  Cargo.toml  Makefile  README.md  assign.s  test.sh
.github/workflows/: ci.yaml
src/: expr.rs  function_collector.rs  generator.rs  lex.rs  lib.rs  main.rs  offset_calculator.rs  parser.rs  statement.rs  token.rs  top_level.rs  type.rs  types.rs  typing.rs  variable_collector.rs
tests/: Dockerfile  integration_test.rs
tmpdir/: external_func.c
